Fix the bug on resourcees page subscription form submit button not showing properly.

--- a/themes/sosnpr/sass/_footer.scss
+++ b/themes/sosnpr/sass/_footer.scss
@@ -191,6 +191,10 @@
         border-radius: 10%;
         box-shadow: none;
         border: none;
+        .fa-angle-right{
+          display: inline-block;
+          padding: 0;
+        }
       }
     }
   }
